# ring-appletv-viewer

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  KNOWN_ISSUES.md  README.md  RELEASE_NOTES.md  docker-compose.yml  go2rtc.yaml  mediamtx.yml
partner-auth-backend/: .env.example  Dockerfile  README.md  pyproject.toml
partner-auth-backend/app/: __init__.py  config.py  dependencies.py  logging_redaction.py  main.py
partner-auth-backend/app/adapters/: __init__.py  base.py  error_codes.py  errors.py  factory.py  failure_class.py  go2rtc_client.py  mappers.py  mock.py  models.py  partner.py  rate_limit.py  ring_consumer_client.py  ring_schemas.py  session_map.py  sip_bridge_client.py  types.py  unofficial.py
partner-auth-backend/app/data/: __init__.py  encryptor.py  refresh_token_store.py  token_store.py
partner-auth-backend/app/middleware/: __init__.py  input_sanitizer.py  rate_limiter.py
partner-auth-backend/app/models/: __init__.py  schemas.py
partner-auth-backend/app/routes/: __init__.py  app_api.py  mock_ring_api.py  ring_callbacks.py
partner-auth-backend/app/routing/: __init__.py  health_manager.py  (+4 more)
partner-auth-backend/tests/: conftest.py  test_account_linking.py  test_api_key_auth.py  test_config_property.py  test_config_validation.py  test_dependency_injection.py  test_encryptor.py  test_endpoints.py  test_error_responses.py  test_factory.py  test_health_endpoints.py  test_hmac_verifier.py  test_input_validation.py  test_integration.py  test_log_redaction.py  test_logging.py  test_route_delegation.py  test_token_service.py  test_webhook.py
(+261 files in other folders)
