[project]
name = "partner-auth-backend"
version = "0.1.0"
description = "Ring Partner API OAuth 2.0 authentication backend for RingAppleTV"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "cryptography==44.0.0",
    "pydantic==2.10.4",
    "aiosqlite==0.20.0",
    "httpx==0.28.1",
    "slowapi==0.1.9",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "hypothesis==6.119.3",
    "httpx>=0.28.1",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
]
